2007-12-05  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/fileops.pdb: pass the error also to
	file_utils_filename_to_uri().

	* app/pdb/fileops_cmds.c: regenerated.

2007-12-05  Sven Neumann  <sven@gimp.org>

	* modules/gimpinputdevicestore-dx.c
	* modules/gimpinputdevicestore-hal.c: the code for !HAVE_LIBHAL
	ended up in the wrong file.

2007-12-05  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/image.pdb (set_resolution): set the error
	instead of using gimp_message().

	* app/pdb/image_cmds.c: regenerated.

2007-12-05  Michael Natterer  <mitch@gimp.org>

	* app/pdb/gimppdb-query.[ch]: added GError arguments and reduce
	number of labels: to one by simply checking if the regex exists
	before unreffing it.

	* tools/pdbgen/pdb/procedural_db.pdb: pass the error to the query
	functions.

	* app/pdb/procedural_db_cmds.c: regenerated.

2007-12-05  Michael Natterer  <mitch@gimp.org>

	* configure.in: disable deprecated API also for the current
	develoment versions of glib, pango and gtk+, so we can fix new
	deprecations as soon as they pop up.

2007-12-04  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* tools/pdbgen/pdb/image.pdb: pass "error" instead of NULL.
	* app/pdb/image_cmds.c: regenerated.

2007-12-04  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* tools/pdbgen/pdb/gradient.pdb
	* tools/pdbgen/pdb/palette.pdb
	* tools/pdbgen/pdb/brush.pdb: use the new error arg instead
	of creating a GError and handling it internally.

	* app/pdb/palette_cmds.c
	* app/pdb/gradient_cmds.c
	* app/pdb/brush_cmds.c: regenerated.

2007-12-04  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdrawable.[ch]: added new API
	gimp_drawable_estimate_memsize() and virtual function
	GimpDrawable::estimate_memsize() which estimate the memsize of a
	drawable after scaling/resizing.

	* app/core/gimplayer.c: implement the virtual function and take
	the layer mask into account.

	* app/core/gimpimage-item-list.[ch] (gimp_image_item_list_get_list):
	added const qualifiers.
